Fixed layout issues, Rough 1.3.2

--- a/stylesheets/flexbox.css
+++ b/stylesheets/flexbox.css
@@ -3,7 +3,7 @@
     display: -webkit-flex;
     display: flex;
     position: relative;
-    width: 90%;
+    width: 100%;
     justify-content: center;
 }
 
@@ -18,6 +18,11 @@
     overflow: hidden;
 }
 
+.userColumn img {
+    width: 140px;
+    height: 100px;
+}
+
 .wordColumn {
     background-color: lightblue;
     margin: 15px;
@@ -27,4 +32,9 @@
     border-radius: 2px;
     box-shadow: 1px 2px 2px 0px gray;
     overflow: hidden;
+}
+
+.wordColumn img {
+    width: 140px;
+    height: 100px;
 }
