--- a/stylesheets/form.css
+++ b/stylesheets/form.css
@@ -25,8 +25,8 @@ form, input {
     position: absolute;
     left: 475px;
     top: 7px;
-    width: 17px;
-    height: 17px;
+    width: 16px;
+    height: 16px;
     margin: 0px;
     padding: 0px;
 }
