--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -3,7 +3,10 @@ body {
     font-family:  Arial, helvetica, sans-serif;
     margin: 0px;
     padding: 0px;
+    width: 100%;
 }
+
+/* header */
 
 .header {
     background-color: #334;
@@ -12,7 +15,6 @@ body {
     margin-bottom: 0px;
     padding: 20px;
     padding-left: 30px;
-    width: 100%;
     height: 40px;
     box-shadow: 1px 2px 2px 0px gray;
 }
@@ -22,7 +24,12 @@ body {
     color: white;
     position: absolute;
     top: 25px;
-    
+    transition: 300ms;
+}
+
+.header a:hover {
+    color: #ccc;
+    transition: 300ms;
 }
 
 .header img {
@@ -33,7 +40,7 @@ body {
 
 .header p {
     font-size: 25px;
-    font-style: bold;
+    font-weight: 600;
     position: absolute;
     top: -24px;
     left: 46px;
@@ -41,28 +48,25 @@ body {
     float: left;
 }
 
+/* navigation */
+
 .navbtn {
     margin-top: 0px;
     margin-bottom: 0px;
-    padding: 0px;
     list-style-type: none;
     text-align: right;
+    height: 100%;
+    position: absolute;
+    top: -2px;
+    right: 0px;
 }
 
 .navbtn li {
-    background-color: #556;
     margin: 0px;
-    padding: 0px;
-    width: 10%;
-    height: 50px;
+    padding-left: 10px;
+    width: 80px;
+    height: 80px;
     float: left;
-    text-align: center;
-    line-height: 30px;
-    box-shadow: 1px 2px 2px 0px gray;
-}
-
-.navbtn li:hover {
-    background-color: #778;
     transition: 300ms;
 }
 
@@ -71,8 +75,11 @@ body {
     display: block;
     padding: 10px 0;
     text-decoration: none;
+    text-align: center;
     color: white;
 }
+
+/* caption */
 
 .caption {
     margin: 20px;
@@ -80,6 +87,8 @@ body {
     padding: 0px;
     position: relative;
 }
+
+/* buttons */
 
 .buttons {
     margin: 20px;
@@ -91,6 +100,7 @@ body {
     border-radius: 3px;
     margin-right: 10px;
     padding: 10px;
+    width: 100px;
     background-color: darkslategray;
     color: white;
     transition: 300ms;
